# hestia

./: .gitignore  README.md  client.py  docker-compose.yml  git_ssh  git_ssh.pub  main.py  ollama_mcp.py  pyproject.toml  server.py
bert_multi-class_sentiment_classification_for_twitter_tweets/: auto_model_for_sequence_classification.py  bert_base_uncased_sentiment_model.py  check.py  check2.py  model_building.py  requirements.txt  streamlit_app.py  test_imports.py
emotion-predicition-pipeline/: image_classification.py  main.py  ner.py  roberta.py
emotion-predicition-pipeline/image_classification/: facial_emotional_recognition.py
fake_news_detection/: benchmark.py  benchmark_and_performance.py  main.py  model_evaluation.py  requirements.txt  run.json
mcp-servers/quickstart-resources/mcp-client-typescript/: index.ts  package-lock.json  package.json  tsconfig.json
random_transformers/: distilbert.py  question_answer.py  summarization.py  text_generation.py  text_to_audio.py  transformer_version.py  translation.py
random_transformers/image_classification/: facial_age_detection.py  image_classification.py  image_segmentation.py
restaurant_search_ner_recognition_fine_tuning_distilbert/: main.py
restaurant_search_ner_recognition_fine_tuning_distilbert/data/: train.bio
