[project]
name = "hestia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.2.6",
    "ollama>=0.4.8",
]
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    